tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_break_and_continue_in_constrained_fn/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: continue is only allowed in unconstrained functions
  ┌─ src/main.nr:5:21
  │
5 │                     continue;
  │                     --------- Constrained code must always have a known number of loop iterations
  │

error: break is only allowed in unconstrained functions
  ┌─ src/main.nr:8:21
  │
8 │                     break;
  │                     ------ Constrained code must always have a known number of loop iterations
  │

Aborting due to 2 previous errors
